# SEO-Tools

./: .dockerignore  .gitignore  AUTHENTICATION-SETUP.md  CONTRIBUTING.md  DEBUGGING_NESTED_SCHEMA.md  FINAL-FIX.bat  FINAL-FIX.sh  FIX_504_LINK_GRAPH.md  KEYBERT_REPLACEMENT_SOLUTION.md  Makefile  QUICK-FIX-GUIDE.md  README.md  REAL_LINK_GRAPH_UPDATE.md  REBUILD-INSTRUCTIONS.md  RESET-API-KEY.md  RESTART_BACKEND_REQUIRED.md  START-HERE.md  TODO.md  check-crawl-data.sh  diagnose-celery.sh  diagnose.sh  docker-compose.yml  fix-everything.bat  fix-everything.sh  generate-new-key.bat  generate-new-key.sh  rebuild-frontend-only.bat  rebuild-frontend-only.sh  rebuild-frontend.bat  rebuild-frontend.sh  reset-database.sh  test-api.sh  test-celery-simple.py  test-crawl-task.sh  test_schema_unwrap.py
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
backend/app/: __init__.py  main.py
backend/app/adapters/: __init__.py
backend/app/core/: __init__.py  config.py  database.py  deps.py  redis.py  security.py
backend/app/middleware/: rate_limit.py
backend/app/models/: __init__.py  api_key.py  content.py  crawl.py  page.py  project.py  schema.py  tenant.py  usage.py  webhook.py
backend/app/repositories/: __init__.py  api_key.py  base.py  crawl.py  page.py  project.py  tenant.py
backend/app/services/: anchor_text_analyzer.py  content_generation.py  (+19 more)
backend/migrations/: env.py
backend/scripts/: bootstrap.py  generate_key.py  reindex_meilisearch.py
backend/tests/: README.md  __init__.py  conftest.py  test_main.py
(+77 files in other folders)
